<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="google_api_key">AIzaSyBA-XilcR3Fn3ZHcdttWK0CS6Y_DukbQY4</string>
    <string name="property_type">Property Type: </string>
    <string-array name="pType_array">
        <item>House</item>
        <item>Townhouse</item>
        <item>Condo</item>
    </string-array>
    <string name="street_address">Street Address: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>

    <string-array name="state_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="zip">Zipcode: </string>
    <string name="housePrice">House Price</string>
    <string name="downPaymentAmount">Down Payment Amount</string>
    <string name="annualInterestRate">Annual Interest Rate</string>
    <string name="lengthOfMortgageLoan">Mortgage Loan Length(in years)</string>

    <string-array name="lengthOfMortgageLoan_array">
        <item>15</item>
        <item>30</item>
    </string-array>

    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="monthlyPayment">Monthly Payment</string>
    <string name="totalPayment">Total Payment</string>
    <string name="intZero">0</string>
    <string name="doubleZero">0.0</string>
    <string name="missingEntries">Missing Entries</string>
    <string name="provideEntries">Please enter the values first</string>
    <string name="OK">OK</string>
    <string name="title_activity_maps">Map</string>

</resources>
